final changes, discussion :pencil:

--- a/homework.rmd
+++ b/homework.rmd
@@ -139,13 +139,13 @@ Our resulting tree does not correspond with the classical hypotheses of the majo
 knitr::include_graphics("data/trees.png")
 ```
 
-The paraphyletic position of the Monopisthocotylea as basal group and the Polyopisthocotylea as sister group to the Trematoda could indicate two separate evolutionary events for the lifestyle in the Neodermata evolutionary history (ecto- vs. endoparasitism). As the Turbellaria, which comprise the non parasitic Plathelminthes besides the parasitic Neodermata, are free living we would expect that ectoparasitic lifestyle is the logical plesiomorphic trait for Neodermata. @park2007 also suggested that ectoparasitism arose first but they only used one taxa to represent the monogeneans in their study (Polyopisthocotylean, *Microcotyle sebastis*). Another study with more Monopisthocotyleans but only one Polyopisthocotylean taxa (*M. sebastis*) did also come to a similar conclusion, although the resulting tree did show the Polyopisthocotylean as sister group to the monophyletic Trematoda and Cestoda, see fig. \@ref(fig:tapestation)-b) [@perkins2010]. Our results also indicate the Monopistholocotyleans as basal group but suggest a monophyly between the Polyopisthocotylean and the Trematoda. This could indicate a second evolutionary event back from endoparasitism to ectoparasitims in the Polyopisthocotyleans. Another possible hypothesis is, that ectoparasitism poses the basal trait, which has been previously proposed for the Polyopisthocotyleans [@park2007; @perkins2010].
+The paraphyletic position of the Monopisthocotylea as basal group and the Polyopisthocotylea as sister group to the Trematoda could indicate two separate evolutionary events for the lifestyle in the Neodermata evolutionary history (ecto- vs. endoparasitism). As the Turbellaria, which comprise the non parasitic Plathelminthes besides the parasitic Neodermata, are free living we would expect that the ectoparasitic lifestyle is an ancestral trait for Neodermata. @park2007 also suggested that ectoparasitism arose first but they only used one taxa to represent the monogeneans in their study (Polyopisthocotylean, *Microcotyle sebastis*). Another study with more Monopisthocotyleans but only one Polyopisthocotylean taxa (*M. sebastis*) did also come to a similar conclusion, although the resulting tree did show the Polyopisthocotylean as sister group to the monophyletic Trematoda and Cestoda, see fig. \@ref(fig:tapestation)-b) [@perkins2010]. Our results also indicate the Monopistholocotyleans as basal group but suggest a monophyly between the Polyopisthocotylean and the Trematoda. This could indicate a second evolutionary event back from endoparasitism to ectoparasitims in the Polyopisthocotyleans. Another possible hypothesis is, that ectoparasitism poses the basal trait, which has been previously proposed for the Polyopisthocotyleans [@park2007; @perkins2010].
 
 The same can be inferred for the evolutionary history of the life cycle (complex vs. simple). The majority of taxa in the monogeneans possess a simple life cycle, whereas the life cycle of trematodes and cestodes is more complex. Trematodes almost always infect moluscs in their life cycle, while, cestodes possess one or two intermediate hosts and their eggs are released from intestinally living adults via host faeces [@gibson2014]. The evolutionary history could follow two distinct events from simple to complex and back to a simple life cycle, or the simple life cycle in Polyopisthocotyleans could still represent the ancestral trait inferring the independent evolution of a complex life cycle in the cestodes and trematodes. 
 
-The evolution of the diet seems more difficult. Our basal group of Monopisthocotylean feeds mostly on skin and/or mucus [@gibson2014]. This type of feeding could be the ancestral trait but it also seems plausible that the ancestor already did feed on blood like most Polyopisthocotyleans [@perkins2010]. As trematodes also mostly feed on blood, diet could validate the sister relationship between the Polyopishocotyleans and Trematoda and lead back to a shared ancestor, which probably also showed the same feeding habit. The evolutionary speciation between the Polyopisthocotyleans and the Trematoda might have evolved via adaptation to different niches on host species (ecto- and endoparasitic). The split of the Cestoda might have happened earlier in history as previously thought [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. The feeding habit of Cestoda is probably not the ancestral trait as they absorb their nutrients through the surface layer and did loose organs for digestion, e.g. guts [@gibson2014], which probably poses a point of no return, at least in the given time frame. 
+The evolution of the diet seems more difficult. Our basal group of Monopisthocotylean feeds mostly on skin and/or mucus [@gibson2014]. This type of feeding could be the ancestral trait but it also seems plausible that the ancestor already did feed on blood like most Polyopisthocotyleans, supporting a sanguinivorous ancestor for the trematodes and cestodes like proposed by @perkins2010. However, as trematodes also mostly feed on blood, diet could validate the sister relationship between the Polyopishocotyleans and Trematoda and lead back to a shared ancestor, which probably also showed the same feeding habit. The evolutionary speciation between the Polyopisthocotyleans and the Trematoda might have evolved via adaptation to different niches on host species (ecto- and endoparasitic). The split of the Cestoda might have happened earlier in history as previously thought [@littlewood1999; @olson2001; @perkins2010; @laumer2014]. The feeding habit of Cestoda is probably not the ancestral trait as they absorb their nutrients through the surface layer and did loose organs for digestion, e.g. guts [@gibson2014], which probably represents a dietary specialisation and not the ancestral state. 
 
-Overall, our newly proposed phylogeny should give room for new discussion and shows the need for further molecular studies involving multiple species of monogeneans and the advantages in using a supermatrix of different genes. 
+Overall, our newly proposed phylogeny should give room for new discussions and shows the need for further molecular studies involving multiple species of monogeneans from both subclasses. Additionally it shows the advantages of using a supermatrix of different genes for phylogenetic reconstructions. 
 
 # Acknowledgments
 
