--- a/homework.rmd
+++ b/homework.rmd
@@ -17,7 +17,7 @@ bibliography: bib.bibtex
 biblio-style: authoryear
 link-citations: true
 urlcolor: blue
-abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSCO genes was used to build a phylogenetic tree. Results suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda as a sister group of the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This suggests that the monogeneans are a polyphyletic group and that the ectoparasitic and simple lifestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if lifestyle (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved twice in the neodermata group. The close relationship between the Polyopisthocotylea (Monogenea) and Trematoda could be explained by a similar diet between those two groups.
+abstract: Using publicly available genomic data and additionally produced NGS data we attempt to resolve the systematic position of the neodermata. A supermatrix of 313 BUSCO genes was used to build a phylogenetic tree. Results suggest a monphyly of Polyopisthocotyleans (Monogenea) and Trematoda as a sister group of the Cestoda. Monopisthocotyleans (Monogenea) seem to be the most basal group of neodermata. This suggests that the monogeneans are a polyphyletic group and that the ectoparasitic and simple lifestyle can be regarded as the basal lifestyle, from which endoparastitism evolved. This new insight opens a discussion if lifestyle (ecto- vs. endoparasitic) and life history (simple vs. complex) could have evolved twice in the neodermata group. The close relationship between the Polyopisthocotylea (Monogenea) and Trematoda could be explained by a similar diet of these two groups.
 ---
 ```{r global_options, include=FALSE}
 # this tells r to fix images on positions were I want them and don't let LaTeX shuffle them around like crazy
@@ -139,7 +139,7 @@ Our resulting tree does not correspond with the classical hypotheses of the majo
 knitr::include_graphics("data/trees.png")
 ```
 
-The paraphyletic position of the Monopisthocotylea as basal group and the Polyopisthocotylea as sister group to the Trematoda could indicate two separate evolutionary events for the lifestyle in the Neodermata evolutionary history (ecto- vs. endoparasitism). As the Turbellaria, which comprise the non parasitic Plathelminthes besides the parasitic Neodermata, are free living we would expect that the ectoparasitic lifestyle is an ancestral trait for Neodermata. @park2007 also suggested that ectoparasitism arose first but they only used one taxa to represent the monogeneans in their study (Polyopisthocotylean, *Microcotyle sebastis*). Another study with more Monopisthocotyleans but only one Polyopisthocotylean taxa (*M. sebastis*) did also come to a similar conclusion, although the resulting tree did show the Polyopisthocotylean as sister group to the monophyletic Trematoda and Cestoda, see fig. \@ref(fig:tapestation)-b) [@perkins2010]. Our results also indicate the Monopistholocotyleans as basal group but suggest a monophyly between the Polyopisthocotylean and the Trematoda. This could indicate a second evolutionary event back from endoparasitism to ectoparasitims in the Polyopisthocotyleans. Another possible hypothesis is, that ectoparasitism poses the basal trait, which has been previously proposed for the Polyopisthocotyleans [@park2007; @perkins2010].
+The paraphyletic position of the Monopisthocotylea as basal group and the Polyopisthocotylea as sister group to the Trematoda could indicate two separate evolutionary events for the lifestyle in the Neodermata evolutionary history (ecto- vs. endoparasitism). As the Turbellaria, which comprise the non parasitic Plathelminthes besides the parasitic Neodermata, are free living we would expect that the ectoparasitic lifestyle is an ancestral trait for Neodermata. @park2007 also suggested that ectoparasitism arose first but they only used one taxa to represent the monogeneans in their study (Polyopisthocotylean, *Microcotyle sebastis*). Another study with more Monopisthocotyleans but only one Polyopisthocotylean taxa (*M. sebastis*) did also come to a similar conclusion, although the resulting tree did show the Polyopisthocotylean as sister group to the monophyletic Trematoda and Cestoda, see fig. \@ref(fig:tapestation)-b) [@perkins2010]. Our results also indicate the Monopistholocotyleans as basal group but suggest a monophyly between the Polyopisthocotylean and the Trematoda. This could indicate a second evolutionary event back from endoparasitism to ectoparasitism in the Polyopisthocotyleans. Another possible hypothesis is, that ectoparasitism poses the basal trait, which has been previously proposed for the Polyopisthocotyleans [@park2007; @perkins2010].
 
 The same can be inferred for the evolutionary history of the life cycle (complex vs. simple). The majority of taxa in the monogeneans possess a simple life cycle, whereas the life cycle of trematodes and cestodes is more complex. Trematodes almost always infect moluscs in their life cycle, while, cestodes possess one or two intermediate hosts and their eggs are released from intestinally living adults via host faeces [@gibson2014]. The evolutionary history could follow two distinct events from simple to complex and back to a simple life cycle, or the simple life cycle in Polyopisthocotyleans could still represent the ancestral trait inferring the independent evolution of a complex life cycle in the cestodes and trematodes. 
 
